<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.activities.main.MainActivity">

    <TextView
        android:id="@+id/user_token_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/user_token_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_token_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/access_token_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/access_token_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/access_token"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/token_type_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/token_type_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/token_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/grant_type_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/grant_type_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/grant_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/scope_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/scope_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scope"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/refresh_token_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/refresh_token_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/refresh_token"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/expires_in_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/expires_in_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expires_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:text="@string/dummy" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
